# GoDaddy-DNS-CLI

./: CHANGELOG.md  Dockerfile  GODADDY_API_SETUP.md  GODADDY_AUTO_SETUP.py  GODADDY_CLI_DEMO.py  INSTALL_COMPLETE_CLI.bat  LICENSE  PLUGIN_ARCHITECTURE.md  README.md  STATUS_REPORT.md  aion_enterprise_config.json  example_config.json  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/: API_REFERENCE.md  CONFIGURATION.md  DEPLOYMENT.md
docs/api/: api_reference.json  complete_reference.md  quick_reference.md
examples/bulk/: dns-records.csv  dns-records.json
examples/scripts/: deploy-staging.sh
examples/templates/: web-stack.yaml
godaddy_cli/: __init__.py  __version__.py  cli.py
godaddy_cli/commands/: __init__.py  auth.py  bulk.py  config.py  deploy.py  dns.py  doctor.py  domain.py  export.py  import_cmd.py  init.py  monitor.py  template.py
godaddy_cli/core/: __init__.py  api_client.py  auth.py  config.py  exceptions.py  shell.py  simple_api_client.py
godaddy_cli/ui/: __init__.py  terminal.py
godaddy_cli/utils/: __init__.py  error_handlers.py  formatters.py  validators.py
godaddy_cli/web/: server.py
godaddy_dns_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: build_installers.py  generate_docs.py
tests/: conftest.py
tests/e2e/: __init__.py  test_complete_user_journey.py
tests/integration/: __init__.py  conftest.py  test_api_integration.py  test_cli_integration.py
tests/unit/: test_api_client.py  test_auth.py  test_config.py
web-ui/: package.json  tsconfig.json  vite.config.ts
web-ui/src/: App.css  App.tsx
web-ui/src/components/: AdvancedFeatures.tsx  BulkOperations.tsx  DNSRecordForm.tsx  DNSRecordTable.tsx
web-ui/src/pages/: Dashboard.tsx
web-ui/src/types/: api.ts
web-ui/src/utils/: api.ts
