[build-system]
requires = ["setuptools>=65", "wheel", "setuptools-scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "godaddy-dns-cli"
dynamic = ["version"]
description = "Enterprise-grade CLI tool for GoDaddy DNS management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Yatrogenesis", email = "support@godaddy-cli.dev"},
]
maintainers = [
    {name = "Yatrogenesis", email = "support@godaddy-cli.dev"},
]
keywords = [
    "godaddy",
    "dns",
    "cli",
    "automation",
    "devops",
    "infrastructure",
    "api",
    "management"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Internet :: Name Service (DNS)",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Yatrogenesis/GoDaddy-DNS-CLI"
Documentation = "https://godaddy-cli.dev/docs"
Repository = "https://github.com/Yatrogenesis/GoDaddy-DNS-CLI"
Issues = "https://github.com/Yatrogenesis/GoDaddy-DNS-CLI/issues"
Changelog = "https://github.com/Yatrogenesis/GoDaddy-DNS-CLI/blob/main/CHANGELOG.md"

[project.scripts]
godaddy = "godaddy_cli.cli:main"
gd = "godaddy_cli.cli:main"
godaddy-web = "godaddy_cli.web.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["godaddy_cli*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
godaddy_cli = ["templates/*", "static/*", "web/dist/*"]

[tool.setuptools_scm]
write_to = "godaddy_cli/__version__.py"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | build
  | .venv
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
    -ra
    -q
    --strict-markers
    --cov=godaddy_cli
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
"""
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["godaddy_cli"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]